# data-support

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  biome.json  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt
.github/workflows/: js.yml  lint.yml
cli/: __init__.py  deduplicate_schema.py  dot.py  schema_erd.py  util.py
ids-drr-paraguay-branding/: .npmrc  README.md  knip.jsonc  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ids-drr-paraguay-branding/src/: index.ts
ids-drr-paraguay-branding/src/components/: footer.tsx  intro-section.module.scss  intro-section.tsx
ids-drr-paraguay-branding/src/hooks/: use-dynamic-translations.ts
ids-drr-paraguay-branding/src/messages/: es.json  gn.json
ids-drr-paraguay-data/: README.md  config.toml
ids-drr-paraguay-data/data/: Paraguay_data.csv
ids-drr-paraguay-data/indicators/: Paraguay_indicators.csv
netherlands_ocds_transformer/: .gitignore  README.md  local_extensions.json  mapping_ocds.csv  requirements.in  requirements.txt  schema.json  transform.py
non_ocds_collect/: .gitignore  README.md  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  scrapy.cfg  setup.cfg  setup.py
non_ocds_collect/non_ocds_scrapy/: exporters.py  filters.py  log_formatter.py  settings.py
non_ocds_collect/non_ocds_scrapy/base_spiders/: base_spider.py  export_file_spider.py
non_ocds_collect/non_ocds_scrapy/commands/: incrementalupdate.py
non_ocds_collect/non_ocds_scrapy/extensions/: __init__.py  database_store.py
non_ocds_collect/non_ocds_scrapy/spiders/: uzbekistan_auctions.py  uzbekistan_base_spider.py  uzbekistan_completed_deals.py  uzbekistan_deals.py  uzbekistan_direct_purchases.py
ocds_fields_indicators/: README.md  index.html  indicators.csv  main.js  style.css
portland_ocds/: codelists.xlsx  direct.toml  direct_mapping.xlsx  limited.toml  limited_mapping.xlsx  outline.toml  outline_mapping.xlsx  pyproject.toml  undefined.toml  undefined_mapping.xlsx
