[project]
name = "data-support"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "PTH",
    "TRY003",  # errors
    "D200",  # https://github.com/astral-sh/ruff/issues/6269
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
